# mushpick

./: .gitignore  Cargo.toml  builder_script.sh  map_n10_w50_p1_m1.txt  map_n5_w10_p1_m1.txt  notes.txt  solution_map1.txt  solution_map_3.txt  solution_map_n15_m7_w70_p3.json  solution_map_n5w15p1m1_2025-08-19-10-51-00-496451246.txt  solution_render_test_multiplayer.txt
compiled/: mushpick
maps/: batch_test_b10.txt  map_1.txt  map_2.txt  map_4.txt  map_5.txt  map_6.txt  map_greedy_is_not_best.txt  map_n10_m7_w40_p3.txt  map_n10w40p1m1_2025-09-26-13-29-19-958480267.txt  map_n10w40p2m4_2025-09-26-13-29-57-861707357.txt  map_n15_m7_w70_p3.txt  map_n200w16000p1m10_2025-10-02-13-27-14-366940850.txt  map_n50w1000p1m1_2025-08-19-19-25-00-626056999.txt  map_n5w15p1m1_2025-08-19-10-51-00-496451246.txt  map_render_test_multiplayer.txt  map_s100_p3_m10.txt  map_s100_p3_m11.txt  map_s100_p3_m12.txt  map_s100_p3_m13.txt  map_s100_p3_m14.txt  map_s100_p3_m15.txt  map_s100_p3_m16.txt  map_s100_p3_m17.txt  map_s100_p3_m18.txt  map_s100_p3_m19.txt  map_s100_p3_m20.txt  map_s100_p3_m5.txt  map_s100_p3_m6.txt  map_s100_p3_m7.txt  map_s100_p3_m8.txt  map_s100_p3_m9.txt  map_s100_w1000_p1_m15.txt  map_s100_w1000_p2_m10.txt  map_s100_w2000_p2_m10.txt  map_s200_m10_p3.txt  map_s200_m20_p3.txt  map_s50_p3_m15.txt  pretty_test.txt  pretty_test_small.txt  small_m10.txt  (+1 more)
render_example/: .vimproject  main.tex
solutions/: map_n50w1000p1m1_2025-08-19-19-25-00-626056999.txt  solution_map_3.json  solution_render_test_multiplayer.json
src/: cli.rs  generator.rs  main.rs  pathfinding.rs  solver.rs  (+2 more)
(+9 files in other folders)
