[package]
name = "mushpick"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
exitcode = "1.1.2"
itertools = "0.14.0"
log = "0.4.26"
rand = { version = "0.9.0", features = ["alloc"] }
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
